[tool.poetry]
name = "dispander"
version = "0.5.2"
description = "Discord Message URL Expander"
authors = ["1ntegrale9 <1ntegrale9uation@gmail.com>"]
maintainers = ["sonyakun <owner@sonyakun.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "dispander", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
